# easyscrape-amazonsuggest

./: README.md  setup.cfg
easyscrape-amazonsuggest/: query.py  querysuggestions.py
easyscrape_amazonsuggest/: querysuggestions.py
